# expert-kit

./: .gitmodules  Cargo.toml  README.md  pyproject.toml
doc/tutorial/standalone/: deepseek-tiny.md  deepseek-v3.md  qwen3-moe-a3b-demo.md
ek-base/: Cargo.toml
ek-base/src/: config.rs  error.rs  lib.rs  utils.rs
ek-base/src/tracing/: grpc.rs  mod.rs
ek-benchmark/: Cargo.toml
ek-benchmark/src/: bench.rs  lib.rs  main.rs
ek-cli/: Cargo.toml
ek-cli/src/: affinity.rs  doctor.rs  main.rs  pretrain.rs
ek-cli/src/schedule/: mod.rs
ek-computation/: Cargo.toml  build.rs
ek-computation/benches/: activate.rs  main.rs
ek-computation/benches/benchmarks/: mod.rs  xpu_ffn.rs  xpu_ffn_activate.rs  xpu_ffn_queue.rs  xpu_ffn_with_weight_transfer.rs  xpu_transfer.rs
ek-computation/ops/: stream.cc  stream.h
ek-computation/src/: lib.rs  schema.rs  x.rs
ek-computation/src/backend/: mod.rs
ek-computation/src/backend/ggml/: ggml_safetensors.rs  mod.rs
ek-computation/src/backend/ort/: mod.rs
ek-computation/src/backend/torch/: mod.rs  tch_safetensors.rs
ek-computation/src/controller/: dispatcher.rs  executor.rs  mod.rs  poller.rs  registry.rs
ek-computation/src/controller/service/: compute.rs  control.rs  mod.rs  state.rs
ek-computation/src/ffn/: expert_ggml.rs  expert_torch.rs  meta.rs  mod.rs
ek-computation/src/ffn/expert_torch/: stream.rs
ek-computation/src/onnx/: exporter.rs
ek-computation/src/proto/: mod.rs
ek-computation/src/shmq/: mod.rs
ek-computation/src/state/: pool.rs  writer.rs
ek-computation/src/worker/: affinity.rs  core.rs  manager.rs  mod.rs  server.rs  state.rs  x.rs
ek-db/: Cargo.toml
ek-db/src/safetensor/: memcache.rs  mod.rs  transformer.rs
ek-db/src/weight_srv/: client.rs  server.rs
ek-ggml/: Cargo.toml  build.rs
ek-ggml/src/: core.rs
ek-integration/expertkit_torch/expertkit_torch/: grpc_client.py
ek-integration/expertkit_torch/expertkit_torch/models/: mixtral.py  qwen3_moe.py
ek-integration/expertkit_torch/expertkit_torch/models/deepseek_v3/: model.py
ek-integration/expertkit_vllm/: README.md
ek-integration/expertkit_vllm/expertkit_vllm/: grpc_client.py  plugin.py
ek-integration/expertkit_vllm/expertkit_vllm/experts/: grpc_expert.py
ek-integration/expertkit_vllm/expertkit_vllm/models/: deepseek_v2.py
ek-integration/expertkit_vllm/expertkit_vllm/utils/: config.py
ek-integration/expertkit_vllm/tests/: test_vllm.py
ek-proto/ek/control/v1/: control.proto
