[package]
name = "ek-base"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
actix-web = { workspace = true }
config = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
gethostname = { workspace = true }
http = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
opendal = { workspace = true }
opentelemetry = { workspace = true }
ort = { workspace = true }
ort-sys = { workspace = true }
reqwest = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tch = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
