[package]
name = "ek-benchmark"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
ek-computation = { workspace = true }

clap = { workspace = true }
log = { workspace = true }
ort = { workspace = true }
polars = { workspace = true }
sysinfo = { workspace = true }
