[package]
name = "ek-computation"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
ek-base = { workspace = true }
ek-db = { workspace = true }
ek-ggml = { workspace = true }
actix-web = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
env_logger = { workspace = true }
half = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mime = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
nix = { workspace = true }
ort = { workspace = true }
ort-sys = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tch = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bench]]
name = "main"
harness = false
