[package]
name = "ek-db"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[dependencies]
ek-base = { workspace = true }
actix-web = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
once_cell = { workspace = true }
opendal = { workspace = true }
reqwest = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
